<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Extra_Extra_Light_Gray"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoImageView"
            android:layout_marginTop="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColor="@color/black"
                android:fontFamily="@font/cairo"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            android:layout_below="@id/emailTextInputLayout"
            android:layout_marginTop="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColor="@color/black"
                android:fontFamily="@font/cairo"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordTextInputLayout"
            app:endIconMode="password_toggle"
            android:layout_marginTop="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:hint="@string/confirm_password"
                android:fontFamily="@font/cairo"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/alreadyRegistered"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/blue_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/cairo"
            android:text="@string/sign_up"
            />
        <TextView
            android:id="@+id/alreadyRegistered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@+id/confirmPasswordTextInputLayout"
            android:layout_marginTop="18dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/already_registered_sign_in"
            android:fontFamily="@font/cairo"
            android:textColor="@color/Dark_Gray"
            />
        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo_notes"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"/>
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/alreadyRegistered"
            android:layout_alignStart="@+id/signUpButton"
            android:layout_alignEnd="@+id/signUpButton"
            android:layout_marginVertical="16dp"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:indeterminateTint="@color/blue_dark" />
    </RelativeLayout>
</ScrollView>
