<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="4dp"
    android:elevation="4dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/shape_item_note"
            android:paddingHorizontal="16dp"
            android:paddingVertical="4dp"
            >

            <TextView
                android:id="@+id/textViewTaskName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textStyle="bold"
                android:padding="2dp"
                android:lines="1"
                android:gravity="center"
                android:fontFamily="@font/cairo"
                android:ellipsize="end"
                android:layout_weight="6"
                android:textSize="18sp"
                android:textColor="@color/black"
                />

        </LinearLayout>
        <TextView
            android:id="@+id/descriptionTextView"
            android:background="@drawable/shape_item_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:fontFamily="@font/cairo"
            android:layout_below="@+id/layout"
            android:text="@string/fake"
            android:textSize="14sp"
            android:textColor="#000000"
            />
        <LinearLayout
            android:padding="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/descriptionTextView"
            android:gravity="start"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="2dp"
                android:fontFamily="@font/cairo"
                android:lines="1"
                android:ellipsize="end"
                android:padding="8dp"
                android:textStyle="bold"
                android:text="@string/task_added_in"
                android:textColor="#000000"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/clock" />
            <TextView
                android:id="@+id/timeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:gravity="start"
                android:textStyle="bold"
                android:padding="8dp"
                android:fontFamily="@font/cairo"
                android:paddingBottom="8dp"
                android:drawablePadding="2dp"
                android:text="00:00:00 PM"
                android:textSize="16sp"
                android:textColor="@color/blue"
                />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            >
            <ImageView
                android:id="@+id/update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:src="@drawable/edit" />

            <ImageView
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:src="@drawable/done3" />
        </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>
